--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -6,6 +6,16 @@
     <title>{{ page.title }}</title>
 </head>
 <body>
+
+  <ul>
+    {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+    {% endfor %}
+  </ul>
+
+
   {{ content }}
 </body>
 </html>
