--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,8 +1,11 @@
 ---
 ---
-@import "test";
-
-.content {
-    width: 45rem;
-    margin: 0 auto;
-  }
+@import "variables";
+@import "mixins";
+@import "global";
+@import "navbar";
+@import "masthead";
+@import "post";
+@import "contact";
+@import "footer";
+@import "bootstrap-overrides";
