--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,16 +9,16 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-            <a class="nav-link" href="index">Home</a>
+            <a class="nav-link" href="/index">Home</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="about">About</a>
+            <a class="nav-link" href="/about">About</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="post">Sample Post</a>
+            <a class="nav-link" href="/post">Sample Post</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="contact">Contact</a>
+            <a class="nav-link" href="/contact">Contact</a>
             </li>
         </ul>
         </div>
