--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,5 +2,18 @@
 layout: default
 ---
 
-{{ content }}          
-       
+{% for post in site.posts %}
+<div class="post-preview">
+  <a href="{{ post.url }}">
+    <h2 class="post-title"> {{ post.title }} </h2>
+    <h3 class="post-subtitle"> {{ post.subtitle }} </h3>
+  </a>
+  <p class="post-meta">Posted by <a href="#"> {{ site.author }}</a> on {{ post.date | date: "%b %d, %Y"}}</p>
+</div>
+<hr>
+{% endfor %}
+
+<!-- Pager -->
+<div class="clearfix">
+  <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
+</div>
