change banner image

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
  <!-- Page Header -->
-<header class="masthead" style="background-image: url({{'/assets/img/home-bg.jpg' | relative_url }})">
+<header class="masthead" style="background-image: url({{ page.banner-image }})">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
