fix one banner issue

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
  <!-- Page Header -->
-<header class="masthead" style="background-image: url({{ page.banner-image | '/assets/img/home-bg.jpg' }})">
+<header class="masthead" style="background-image: url({{ page.banner-image | default: '/assets/img/home-bg.jpg' }})">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
