--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <!-- Main Content -->
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
+        <div id="mainContent" class="col-lg-8 col-md-10 mx-auto">
           {{ content }}          
         </div>
       </div>
