--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,4 +10,4 @@ layout: default
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
 {% endif %}
 
-<p class="view">by {{ page.author | default: site.author }} on {{ page.date | date: "%b %d, %Y" }}</p>
+<p class="view">Posted by {{ page.author | default: site.author }} on {{ page.date | date: "%b %d, %Y" }}</p>
