--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,8 @@
         <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-            <h1>{{ site.heading }}</h1>
-            <span class="subheading">{{ site.sub_heading }}</span>
+                <span class="subheading">Learning technologies on the</span>
+                <h1>Wei</h1>            
             </div>
         </div>
         </div>
