--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-                <span class="subheading">Learning technologies on the</span>
+                <span class="subheading">learning technologies on the</span>
                 <h1>Wei</h1>            
             </div>
         </div>
