--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,11 +1,13 @@
 ---
 ---
-@import "variables";
-@import "mixins";
-@import "global";
-@import "navbar";
-@import "masthead";
-@import "post";
-@import "contact";
-@import "footer";
-@import "bootstrap-overrides";
+
+@import 'variables';
+@import 'mixins';
+@import 'global';
+@import 'navbar';
+@import 'masthead';
+@import 'post';
+@import 'contact';
+@import 'footer';
+@import 'bootstrap-overrides';
+@import 'syntax-highlighting';
