more syntax highlighting fix

--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -15,10 +15,10 @@
   }
 
   // Comment
-  // .err {
-  //     color: #a61717;
-  //     background-color: #e3d2d2
-  // }
+  .err {
+    color: #000000;
+    background-color: #f8f8f8;
+  }
 
   // Error
   .k {
